# captions

./: .gitignore  README.md  pyproject.toml
docs/: index.html
docs/subscriber/: index.html
jitsi-audio-puller/: .gitignore  README.md  index.js  package-lock.json  package.json
scripts/: install_whisper.sh  pulse-setup.sh  pulse-teardown.sh
src/captions_relay/: ably_tokens.py  cli.py  config.py  pulse_captions.py  session_cache.py  signal_listener.py
src/jitsi_captions/: ably_tokens.py  cli.py  config.py
tests/: test_per_speaker_captions.py  test_whisper_stdout_stream_processor.py
web/publisher/: glue.js  index.html
web/subscriber/: index.html
