[project]
name = "jitsi-captions"
version = "0.1.0"
description = "Jitsi captions CLI"
requires-python = ">=3.13"
dependencies = [
    "ably>=3.1.2",
    "click>=8.3.3",
]

[project.scripts]
jitsi-captions = "jitsi_captions.cli:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
