[project]
name = "captions-relay"
version = "0.1.0"
description = "Live meeting captions relay over Ably"
requires-python = ">=3.13"
dependencies = [
    "ably>=3.1.2",
    "click>=8.3.3",
]

[project.scripts]
captions = "captions_relay.cli:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
